--- a/ElvUI_ProjectZidras/Locales/Load_Locales.xml
+++ b/ElvUI_ProjectZidras/Locales/Load_Locales.xml
@@ -1,3 +1,11 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/">
 	<Script file="enUS.lua"/>
+	<Script file="koKR.lua"/>
+	<Script file="frFR.lua"/>
+	<Script file="deDE.lua"/>
+	<Script file="zhCN.lua"/>
+	<Script file="esES.lua"/>
+	<Script file="zhTW.lua"/>
+	<Script file="esMX.lua"/>
+	<Script file="ruRU.lua"/>
 </Ui>
